--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ stages:
 # Build the Spring Boot backend
 build-backend:
   stage: build
-  image: maven:3.8.4-jdk-11
+  image: maven:3.8.4-openjdk-17
   script:
     - mvn clean package -DskipTests
   artifacts:
