--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ build-backend:
 # Test the Spring Boot backend
 test-backend:
  stage: test
- image: maven:3.8.4-jdk-11
+ image: maven:3.8.4-openjdk-17
  script:
    - mvn test
  artifacts:
