--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,13 @@ stages:
   - test
 #  - docker
 #  - deploy
-#
+
+variables:
+  POSTGRES_DB: jdbc:postgresql://localhost:5432/fitness_tracker
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: root
+
+
 ## Variables for Docker
 #variables:
 #  DOCKER_DRIVER: overlay2
@@ -24,8 +30,10 @@ build-backend:
 test-backend:
  stage: test
  image: maven:3.8.4-openjdk-17
+ services:
+   - postgres:latest
  script:
-   - mvn test
+   - mvn test -Dspring.datasource.url=jdbc:postgresql://postgres:5432/$POSTGRES_DB -Dspring.datasource.username=$POSTGRES_USER -Dspring.datasource.password=$POSTGRES_PASSWORD
  artifacts:
    when: always
    paths:
