--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,16 @@ stages:
 #  - docker
 #  - deploy
 
-#variables:
-#  POSTGRES_DB: jdbc:postgresql://localhost:5432/fitness_tracker
-#  POSTGRES_USER: postgres
-#  POSTGRES_PASSWORD: root
+services:
+   - postgres:latest
+
+variables:
+  POSTGRES_DB: fitness_tracker
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: root
+  SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/fitness_tracker
+  SPRING_DATASOURCE_USERNAME: postgres
+  SPRING_DATASOURCE_PASSWORD: root
 
 
 ## Variables for Docker
@@ -30,10 +36,8 @@ build-backend:
 test-backend:
  stage: test
  image: maven:3.8.4-openjdk-17
-# services:
-#   - postgres:latest
  script:
-   - mvn test #-Dspring.datasource.url=$POSTGRES_DB -Dspring.datasource.username=$POSTGRES_USER -Dspring.datasource.password=$POSTGRES_PASSWORD
+   - mvn test -Dspring.profiles.active=test
  artifacts:
    when: always
    paths:
