--- a/fitness-tracker/Dockerfile.frontend
+++ b/fitness-tracker/Dockerfile.frontend
@@ -1,12 +1,12 @@
-# Stage 1: Build React frontend
-FROM node:14-alpine as build
+# Stage 1: Build the application
+FROM node:14 AS build
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
 
-# Stage 2: Serve React frontend with Nginx
+# Stage 2: Serve the application
 FROM nginx:alpine
 COPY --from=build /app/build /usr/share/nginx/html
 EXPOSE 80
