--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,9 +11,14 @@ variables:
   POSTGRES_DB: fitness_tracker
   POSTGRES_USER: postgres
   POSTGRES_PASSWORD: root
-  SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/fitness_tracker
-  SPRING_DATASOURCE_USERNAME: postgres
-  SPRING_DATASOURCE_PASSWORD: root
+  #SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/fitness_tracker
+  #SPRING_DATASOURCE_USERNAME: postgres
+  #SPRING_DATASOURCE_PASSWORD: root
+  CLOUD_SQL_CONNECTION_NAME: fitnesstracker-427616:us-central1:fitness-tracker-instance
+  SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/fitness_tracker?socketFactory=com.google.cloud.sql.postgres.SocketFactory&cloudSqlInstance=${CLOUD_SQL_CONNECTION_NAME}
+  GCLOUD_PROJECT_ID: fitnesstracker-427616
+  GCLOUD_ZONE: us-central1
+  GCLOUD_CLUSTER: autopilot-cluster-1
 
 # Build the Spring Boot backend
 build-backend:
@@ -27,18 +32,40 @@ build-backend:
   only:
     - main
 
+## Test the Spring Boot backend
+#test-backend:
+# stage: test
+# image: maven:3.8.4-openjdk-17
+# script:
+#   - mvn test -Dspring.profiles.active=test
+# artifacts:
+#   when: always
+#   paths:
+#     - target/surefire-reports/
+# only:
+#   - main
+
+
 # Test the Spring Boot backend
 test-backend:
- stage: test
- image: maven:3.8.4-openjdk-17
- script:
-   - mvn test -Dspring.profiles.active=test
- artifacts:
-   when: always
-   paths:
-     - target/surefire-reports/
- only:
-   - main
+  stage: test
+  image: maven:3.8.4-openjdk-17
+  services:
+    - name: google/cloud-sdk:latest
+      entrypoint: ["/bin/bash", "-c", "while true; do sleep 30; done;"]
+  script:
+    - apt-get update && apt-get install wget -y
+    - wget https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O cloud_sql_proxy
+    - chmod +x cloud_sql_proxy
+    - ./cloud_sql_proxy -instances=${CLOUD_SQL_CONNECTION_NAME}=tcp:5432 &
+    - mvn test -Dspring.profiles.active=test
+  artifacts:
+    when: always
+    paths:
+      - target/surefire-reports/
+  only:
+    - main
+
 
 # Build the React frontend
 docker-build-frontend:
@@ -79,7 +106,7 @@ deploy:
     - gcloud config set project $GCLOUD_PROJECT_ID
     - gcloud config set compute/zone $GCLOUD_ZONE
     - gcloud container clusters get-credentials $GCLOUD_CLUSTER
-    - kubectl set image deployment/backend backend=$CI_REGISTRY_IMAGE/backend:$CI_COMMIT_SHORT_SHA
-    - kubectl set image deployment/frontend frontend=$CI_REGISTRY_IMAGE/frontend:$CI_COMMIT_SHORT_SHA
+    - kubectl apply -f k8s/backend-deployment.yaml
+    - kubectl apply -f k8s/frontend-deployment.yaml
   only:
     - main
